--- a/ClientAG/package.json
+++ b/ClientAG/package.json
@@ -27,7 +27,7 @@
     "@types/jest": "^24.0.18",
     "@types/mocha": "^5.2.7",
     "angular-file-saver": "^1.1.3",
-    "angular-material-fileupload": "^0.0.9",
+    "angular-material-fileupload": "0.0.9",
     "bootstrap": "^4.3.1",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-datalabels": "^0.7.0",
